syntax = "proto3";

import "validate/validate.proto";

option java_multiple_files = true;
option java_package = "antiplag.apigateway.grpc";
option java_outer_classname = "StoringServiceProto";

service StoringService {
  rpc storeFile (FileStoreRequest) returns (FileMetaResponse);
  rpc loadFile (FileLoadRequest) returns (FileBodyResponse);
}

message FileStoreRequest {
    string data = 1;
}

message FileLoadRequest {
    int32 id = 1;
}

message FileMetaResponse {
    int32 id = 1;
    string dateCreated = 2 [(validate.rules).string = {
                               pattern:   "^(0[1-9]|[12]\\d|3[01])\\.(0[1-9]|1[1,2])\\.\\d{4} ([0-1]\\d|2[0-4]):([0-5]\\d|60)$",
                               max_bytes: 256,
                           }]; // "01.04.2005 10:00"
}

message FileBodyResponse {
    string data = 1;
}